--- a/package.json
+++ b/package.json
@@ -1,16 +1,11 @@
 {
-  "name": "nodebb-plugin-quickstart",
+  "name": "nodebb-plugin-pr",
   "version": "0.4.3",
   "description": "A starter kit for quickly creating NodeBB plugins",
   "main": "library.js",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/nodebb/nodebb-plugin-quickstart"
-  },
   "keywords": [
     "nodebb",
     "plugin",
-    "quickstart",
     "shell"
   ],
   "husky": {
@@ -26,9 +21,6 @@
     ]
   },
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/nodebb/nodebb-plugin-quickstart/issues"
-  },
   "readmeFilename": "README.md",
   "nbbpm": {
     "compatibility": "^3.0.0"
