--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@pkuanvil/nodebb-plugin-pr",
-	"version": "0.3.0",
+	"version": "1.0.0",
 	"description": "PKU Anvil private additions",
 	"main": "library.js",
 	"repository": {
@@ -16,7 +16,7 @@
 	"license": "MIT",
 	"readmeFilename": "README.md",
 	"nbbpm": {
-		"compatibility": ["^2.0.0", "^3.0.0"]
+		"compatibility": "^2.0.0"
 	},
 	"bugs": {
 		"url": "https://github.com/pkuanvil/nodebb-plugin-pr/issues"
