--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
 	"bugs": {
 		"url": "https://github.com/pkuanvil/nodebb-plugin-pr/issues"
 	},
+	"dependencies": {
+		"mailauth": "^4.1.0"
+	},
 	"devDependencies": {
 		"@commitlint/cli": "^17.3.0",
 		"eslint": "^8.28.0",
