--- a/package.json
+++ b/package.json
@@ -28,10 +28,6 @@
 		"@commitlint/cli": "^17.3.0",
 		"eslint": "^8.28.0",
 		"eslint-config-nodebb": "^0.2.1",
-		"eslint-plugin-import": "2.x",
-		"patch-package": "^6.5.1"
-	},
-	"scripts": {
-		"postinstall": "patch-package"
+		"eslint-plugin-import": "2.x"
 	}
 }
